# ecape-parcel-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: _ecape_calc.py
src/ecape-parcel/: __init__.py  ecape_parcel.py
src/ecape_parcel/: __about__.py  calc.py  ecape_calc.py  sounderpy-test.py
test/: sounderpy-test.py
