[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecape-parcel"
dynamic = ["version"]
description = 'A simple Python package that computes entrainment CAPE parcels.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "a-urq", email = "amelia.r.urquhart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["ecape"]

[project.urls]
Documentation = "https://github.com/a-urq/ecape-parcel-py#readme"
Issues = "https://github.com/a-urq/ecape-parcel-py/issues"
Source = "https://github.com/a-urq/ecape-parcel-py"

[tool.hatch.version]
path = "src/ecape_parcel/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ecape_parcel tests}"

[tool.coverage.run]
source_pkgs = ["ecape_parcel", "tests"]
branch = true
parallel = true
omit = [
  "src/ecape_parcel/__about__.py",
]

[tool.coverage.paths]
ecape_parcel = ["src/ecape_parcel", "*/ecape-parcel/src/ecape_parcel"]
tests = ["tests", "*/ecape-parcel/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
